--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -10,6 +10,8 @@
   {% assign title = post.title %}
 {% endif %}
 
+
+
 <div class="{{ include.type | default: 'list' }}__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -25,6 +27,7 @@
       {% endif %}
     </h2>
     {% include page__meta.html type=include.type %}
+    <!-- {% if site.category_archive.type and post.categories[0] and site.tag_archive.type and post.tags[0] %}{%- include post__taxonomy.html -%}{% endif %} -->
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
 </div>
